created UART receiver task, set baud rate, create state space Queue

--- a/projects/lpc40xx_freertos/.vscode/settings.json
+++ b/projects/lpc40xx_freertos/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "flight_control.h": "c"
+        "flight_control.h": "c",
+        "cstddef": "c",
+        "*.cuh": "c"
     }
 }
