finished body to converter in c #32

--- a/projects/lpc40xx_freertos/.vscode/settings.json
+++ b/projects/lpc40xx_freertos/.vscode/settings.json
@@ -2,6 +2,11 @@
     "files.associations": {
         "flight_control.h": "c",
         "cstddef": "c",
-        "*.cuh": "c"
+        "*.cuh": "c",
+        "matrices.h": "c",
+        "complex": "cpp",
+        "stdlib.h": "c",
+        "math.h": "c",
+        "pid.h": "c"
     }
 }
